(#17) docs: update api exceptions, readme
